Replace `mpaland/printf` with `charlesnicholson/nanoprintf`

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "kernel/src/lib/flanterm"]
 	path = kernel/src/lib/flanterm
 	url = https://github.com/Aster-OS/flanterm.git
-[submodule "kernel/src/lib/printf"]
-	path = kernel/src/lib/printf
-	url = https://github.com/Aster-OS/printf.git
+[submodule "kernel/src/lib/nanoprintf"]
+	path = kernel/src/lib/nanoprintf
+	url = https://github.com/Aster-OS/nanoprintf.git
+	branch = minimal
