--- a/kernel/GNUmakefile
+++ b/kernel/GNUmakefile
@@ -1,58 +1,54 @@
-# Nuke built-in rules and variables.
-MAKEFLAGS += -rR
+# Nuke built-in rules.
 .SUFFIXES:
-
-COMMIT_HASH = $(shell git rev-parse --short HEAD)
 
 # This is the name that our final executable will have.
 # Change as needed.
-override OUTPUT := kernel
+override OUTPUT := aster-kernel
+
+# Target architecture to build for. Default to x86_64.
+ARCH := x86_64
 
 # Install prefix; /usr/local is a good, standard default pick.
 PREFIX := /usr/local
 
-# User controllable C compiler command.
-CC := x86_64-elf-gcc
+# Check if the architecture is supported.
+ifeq ($(filter $(ARCH),aarch64 loongarch64 riscv64 x86_64),)
+    $(error Architecture $(ARCH) not supported)
+endif
 
-# User controllable archiver command.
-AR := x86_64-elf-ar
-
-# User controllable linker command.
-LD := x86_64-elf-ld
+CC := gcc
+LD := ld
 
 # User controllable C flags.
+COMMIT_HASH = $(shell git rev-parse --short HEAD)
 CFLAGS := -Wpedantic -g -O2 -pipe -DPRINTF_INCLUDE_CONFIG_H -DCOMMIT_HASH=\"$(COMMIT_HASH)\"
 
 # User controllable C preprocessor flags. We set none by default.
 CPPFLAGS :=
 
-# User controllable nasm flags.
-NASMFLAGS := -F dwarf -g
+ifeq ($(ARCH),x86_64)
+    # User controllable nasm flags.
+    NASMFLAGS := -g
+endif
 
 # User controllable linker flags. We set none by default.
 LDFLAGS :=
 
 # Ensure the dependencies have been obtained.
-ifneq ($(shell ( test '$(MAKECMDGOALS)' = clean || test '$(MAKECMDGOALS)' = distclean ); echo $$?),0)
-    ifeq ($(shell ( ! test -d freestnd-c-hdrs-0bsd || ! test -d cc-runtime || ! test -f src/limine.h ); echo $$?),0)
+ifneq ($(filter-out clean distclean,$(MAKECMDGOALS)),)
+    ifeq ($(wildcard .deps-obtained),)
         $(error Please run the ./get-deps script first)
     endif
 endif
 
 # Check if CC is Clang.
-override CC_IS_CLANG := $(shell ! $(CC) --version 2>/dev/null | grep 'clang' >/dev/null 2>&1; echo $$?)
-
-# If the C compiler is Clang, set the target as needed.
-ifeq ($(CC_IS_CLANG),1)
-    override CC += \
-        -target x86_64-unknown-none
-endif
+override CC_IS_CLANG := $(shell ! $(CC) --version 2>/dev/null | grep -q '^Target: '; echo $$?)
 
 # Internal C flags that should not be changed by the user.
 override CFLAGS += \
     -Wall \
     -Wextra \
-    -std=c11 \
+    -std=gnu11 \
     -nostdinc \
     -ffreestanding \
     -fno-stack-protector \
@@ -60,102 +56,163 @@ override CFLAGS += \
     -fno-lto \
     -fno-PIC \
     -ffunction-sections \
-    -fdata-sections \
-    -m64 \
-    -march=x86-64 \
-    -mno-80387 \
-    -mno-mmx \
-    -mno-sse \
-    -mno-sse2 \
-    -mno-red-zone \
-    -mcmodel=kernel
+    -fdata-sections
 
 # Internal C preprocessor flags that should not be changed by the user.
 override CPPFLAGS := \
     -I src \
-    -isystem freestnd-c-hdrs-0bsd \
+    -I limine-protocol/include \
+    -isystem freestnd-c-hdrs/include \
     $(CPPFLAGS) \
-    -DLIMINE_API_REVISION=2 \
+    -DLIMINE_API_REVISION=3 \
     -MMD \
     -MP
 
-# Internal nasm flags that should not be changed by the user.
-override NASMFLAGS += \
-    -Wall \
-    -f elf64
+ifeq ($(ARCH),x86_64)
+    # Internal nasm flags that should not be changed by the user.
+    override NASMFLAGS := \
+        $(patsubst -g,-g -F dwarf,$(NASMFLAGS)) \
+        -Wall
+endif
+
+# Architecture specific internal flags.
+ifeq ($(ARCH),x86_64)
+    ifeq ($(CC_IS_CLANG),1)
+        override CC += \
+            -target x86_64-unknown-none-elf
+    endif
+    override CFLAGS += \
+        -m64 \
+        -march=x86-64 \
+        -mabi=sysv \
+        -mno-80387 \
+        -mno-mmx \
+        -mno-sse \
+        -mno-sse2 \
+        -mno-red-zone \
+        -mcmodel=kernel
+    override LDFLAGS += \
+        -m elf_x86_64
+    override NASMFLAGS := \
+        -f elf64 \
+        $(NASMFLAGS)
+endif
+ifeq ($(ARCH),aarch64)
+    ifeq ($(CC_IS_CLANG),1)
+        override CC += \
+            -target aarch64-unknown-none-elf
+    endif
+    override CFLAGS += \
+        -mcpu=generic \
+        -march=armv8-a+nofp+nosimd \
+        -mgeneral-regs-only
+    override LDFLAGS += \
+        -m aarch64elf
+endif
+ifeq ($(ARCH),riscv64)
+    ifeq ($(CC_IS_CLANG),1)
+        override CC += \
+            -target riscv64-unknown-none-elf
+        override CFLAGS += \
+            -march=rv64imac
+    else
+        override CFLAGS += \
+            -march=rv64imac_zicsr_zifencei
+    endif
+    override CFLAGS += \
+        -mabi=lp64 \
+        -mno-relax
+    override LDFLAGS += \
+        -m elf64lriscv \
+        --no-relax
+endif
+ifeq ($(ARCH),loongarch64)
+    ifeq ($(CC_IS_CLANG),1)
+        override CC += \
+            -target loongarch64-unknown-none-elf
+    endif
+    override CFLAGS += \
+        -march=loongarch64 \
+        -mabi=lp64s \
+        -mfpu=none \
+        -msimd=none
+    override LDFLAGS += \
+        -m elf64loongarch
+endif
 
 # Internal linker flags that should not be changed by the user.
 override LDFLAGS += \
-    -m elf_x86_64 \
     -nostdlib \
     -static \
     -z max-page-size=0x1000 \
-    -gc-sections \
-    -T linker.ld
+    --gc-sections \
+    -T linker-scripts/$(ARCH).lds
 
-# Use "find" to glob all *.c, *.S, and *.asm files in the tree and obtain the
-# object and header dependency file names.
-override CFILES := $(shell cd src && find -L * -type f -name '*.c' | LC_ALL=C sort)
-override ASFILES := $(shell cd src && find -L * -type f -name '*.S' | LC_ALL=C sort)
-override NASMFILES := $(shell cd src && find -L * -type f -name '*.asm' | LC_ALL=C sort)
-override OBJ := $(addprefix obj/,$(CFILES:.c=.c.o) $(ASFILES:.S=.S.o) $(NASMFILES:.asm=.asm.o))
-override HEADER_DEPS := $(addprefix obj/,$(CFILES:.c=.c.d) $(ASFILES:.S=.S.d))
+# Use "find" to glob all *.c, *.S, and *.asm files in the tree
+# (except the src/arch/* directories, as those are gonna be added
+# in the next step).
+override SRCFILES := $(shell find -L src cc-runtime/src -type f -not -path 'src/arch/*' 2>/dev/null | LC_ALL=C sort)
+# Add architecture specific files, if they exist.
+override SRCFILES += $(shell find -L src/arch/$(ARCH) -type f 2>/dev/null | LC_ALL=C sort)
+# Obtain the object and header dependencies file names.
+override CFILES := $(filter %.c,$(SRCFILES))
+override ASFILES := $(filter %.S,$(SRCFILES))
+ifeq ($(ARCH),x86_64)
+override NASMFILES := $(filter %.asm,$(SRCFILES))
+endif
+override OBJ := $(addprefix obj-$(ARCH)/,$(CFILES:.c=.c.o) $(ASFILES:.S=.S.o))
+ifeq ($(ARCH),x86_64)
+override OBJ += $(addprefix obj-$(ARCH)/,$(NASMFILES:.asm=.asm.o))
+endif
+override HEADER_DEPS := $(addprefix obj-$(ARCH)/,$(CFILES:.c=.c.d) $(ASFILES:.S=.S.d))
 
-# Default target.
+# Default target. This must come first, before header dependencies.
 .PHONY: all
-all: bin/$(OUTPUT)
-
-# Link rules for building the C compiler runtime.
-cc-runtime-x86_64/cc-runtime.a: GNUmakefile cc-runtime/*
-	rm -rf cc-runtime-x86_64
-	cp -r cc-runtime cc-runtime-x86_64
-	$(MAKE) -C cc-runtime-x86_64 -f cc-runtime.mk \
-		CC="$(CC)" \
-		AR="$(AR)" \
-		CFLAGS="$(CFLAGS)" \
-		CPPFLAGS='-isystem ../freestnd-c-hdrs-0bsd -DCC_RUNTIME_NO_FLOAT'
-
-# Link rules for the final executable.
-bin/$(OUTPUT): GNUmakefile linker.ld $(OBJ) cc-runtime-x86_64/cc-runtime.a
-	mkdir -p "$$(dirname $@)"
-	$(LD) $(OBJ) cc-runtime-x86_64/cc-runtime.a $(LDFLAGS) -o $@
+all: bin-$(ARCH)/$(OUTPUT)
 
 # Include header dependencies.
 -include $(HEADER_DEPS)
 
+# Link rules for the final executable.
+bin-$(ARCH)/$(OUTPUT): GNUmakefile linker-scripts/$(ARCH).lds $(OBJ)
+	mkdir -p "$(dir $@)"
+	$(LD) $(LDFLAGS) $(OBJ) -o $@
+
 # Compilation rules for *.c files.
-obj/%.c.o: src/%.c GNUmakefile
-	mkdir -p "$$(dirname $@)"
+obj-$(ARCH)/%.c.o: %.c GNUmakefile
+	mkdir -p "$(dir $@)"
 	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< -o $@
 
 # Compilation rules for *.S files.
-obj/%.S.o: src/%.S GNUmakefile
-	mkdir -p "$$(dirname $@)"
+obj-$(ARCH)/%.S.o: %.S GNUmakefile
+	mkdir -p "$(dir $@)"
 	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< -o $@
 
+ifeq ($(ARCH),x86_64)
 # Compilation rules for *.asm (nasm) files.
-obj/%.asm.o: src/%.asm GNUmakefile
-	mkdir -p "$$(dirname $@)"
+obj-$(ARCH)/%.asm.o: %.asm GNUmakefile
+	mkdir -p "$(dir $@)"
 	nasm $(NASMFLAGS) $< -o $@
+endif
 
 # Remove object files and the final executable.
 .PHONY: clean
 clean:
-	rm -rf bin obj cc-runtime-x86_64
+	rm -rf .cache bin-$(ARCH) obj-$(ARCH) compile_commands.json
 
 # Remove everything built and generated including downloaded dependencies.
 .PHONY: distclean
-distclean: clean
-	rm -rf freestnd-c-hdrs-0bsd cc-runtime src/limine.h
+distclean:
+	rm -rf bin-* cc-runtime freestnd-c-hdrs limine-protocol obj-* .cache .deps-obtained compile_commands.json
 
 # Install the final built executable to its final on-root location.
 .PHONY: install
 install: all
 	install -d "$(DESTDIR)$(PREFIX)/share/$(OUTPUT)"
-	install -m 644 bin/$(OUTPUT) "$(DESTDIR)$(PREFIX)/share/$(OUTPUT)/"
+	install -m 644 bin-$(ARCH)/$(OUTPUT) "$(DESTDIR)$(PREFIX)/share/$(OUTPUT)/$(OUTPUT)-$(ARCH)"
 
 # Try to undo whatever the "install" target did.
 .PHONY: uninstall
 uninstall:
-	rm -f "$(DESTDIR)$(PREFIX)/share/$(OUTPUT)/$(OUTPUT)"
+	rm -f "$(DESTDIR)$(PREFIX)/share/$(OUTPUT)/$(OUTPUT)-$(ARCH)"
 	-rmdir "$(DESTDIR)$(PREFIX)/share/$(OUTPUT)"
